--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html>
 <head>
 <title>
-новий сайт
+РЅРѕРІРёР№ СЃР°Р№С‚
 </title>
 </head>
 <body>
-<h1 style="position: relative;text-align: center;"><big>Добро пожаловать</big></h1>
+<h1 style="position: relative;text-align: center;"><big>Р”РѕР±СЂРѕ СЏ С‚СѓС‚ РїРѕР¶Р°Р»РѕРІР°С‚СЊ</big></h1>
 <hr>
-<h2 style="position: relative;text-align: center;"><big>Сайт тренировка</big></h2>
+<h2 style="position: relative;text-align: center;"><big>РЎР°Р№С‚ С‚СЂРµРЅРёСЂРѕРІРєР°</big></h2>
 <br>
 <h3 style="position: relative;text-align: center;"><big>HTML</big></h3>
-<p style="position: relative; left: 3%;width: 95%;"><big><big>HTML (англ. HyperText Markup Language — мова розмітки гіпертексту) — це мова тегів, засобами якої здійснюється розмічання вебсторінок для мережі Інтернет. Браузери отримують HTML-документи з вебсервера або з локальної пам'яті й передають документи в мультимедійні вебсторінки. HTML описує структуру вебсторінки семантично і спочатку включені сигнали для зовнішнього вигляду документа.<br><br>
+<p style="position: relative; left: 3%;width: 95%;"><big><big>HTML (Р°РЅРіР». HyperText Markup Language вЂ” РјРѕРІР° СЂРѕР·РјС–С‚РєРё РіС–РїРµСЂС‚РµРєСЃС‚Сѓ) вЂ” С†Рµ РјРѕРІР° С‚РµРіС–РІ, Р·Р°СЃРѕР±Р°РјРё СЏРєРѕС— Р·РґС–Р№СЃРЅСЋС”С‚СЊСЃСЏ СЂРѕР·РјС–С‡Р°РЅРЅСЏ РІРµР±СЃС‚РѕСЂС–РЅРѕРє РґР»СЏ РјРµСЂРµР¶С– Р†РЅС‚РµСЂРЅРµС‚. Р‘СЂР°СѓР·РµСЂРё РѕС‚СЂРёРјСѓСЋС‚СЊ HTML-РґРѕРєСѓРјРµРЅС‚Рё Р· РІРµР±СЃРµСЂРІРµСЂР° Р°Р±Рѕ Р· Р»РѕРєР°Р»СЊРЅРѕС— РїР°Рј'СЏС‚С– Р№ РїРµСЂРµРґР°СЋС‚СЊ РґРѕРєСѓРјРµРЅС‚Рё РІ РјСѓР»СЊС‚РёРјРµРґС–Р№РЅС– РІРµР±СЃС‚РѕСЂС–РЅРєРё. HTML РѕРїРёСЃСѓС” СЃС‚СЂСѓРєС‚СѓСЂСѓ РІРµР±СЃС‚РѕСЂС–РЅРєРё СЃРµРјР°РЅС‚РёС‡РЅРѕ С– СЃРїРѕС‡Р°С‚РєСѓ РІРєР»СЋС‡РµРЅС– СЃРёРіРЅР°Р»Рё РґР»СЏ Р·РѕРІРЅС–С€РЅСЊРѕРіРѕ РІРёРіР»СЏРґСѓ РґРѕРєСѓРјРµРЅС‚Р°.<br><br>
 
-Елементи HTML є будівельними блоками сторінок HTML. За допомогою конструкцій HTML, зображення та інші об'єкти, такі як інтерактивні форми, можуть бути вбудовані у візуалізовану сторінку. HTML надає засоби для створення структурованих документів, позначаючи структурну семантику тексту, наприклад заголовки, абзаци, списки, посилання, цитати та інші елементи. Елементи HTML окреслені тегами, написаними з використанням кутових дужок. Теги, такі як і безпосередньо вводять вміст на сторінку. Інші теги, такі як< img /> < input /> < p >оточують і надають інформацію про текст документа і можуть включати інші теги як піделементи. Браузери не показують теги HTML, але використовують їх для інтерпретації вмісту сторінки.<br><br>
+Р•Р»РµРјРµРЅС‚Рё HTML С” Р±СѓРґС–РІРµР»СЊРЅРёРјРё Р±Р»РѕРєР°РјРё СЃС‚РѕСЂС–РЅРѕРє HTML. Р—Р° РґРѕРїРѕРјРѕРіРѕСЋ РєРѕРЅСЃС‚СЂСѓРєС†С–Р№ HTML, Р·РѕР±СЂР°Р¶РµРЅРЅСЏ С‚Р° С–РЅС€С– РѕР±'С”РєС‚Рё, С‚Р°РєС– СЏРє С–РЅС‚РµСЂР°РєС‚РёРІРЅС– С„РѕСЂРјРё, РјРѕР¶СѓС‚СЊ Р±СѓС‚Рё РІР±СѓРґРѕРІР°РЅС– Сѓ РІС–Р·СѓР°Р»С–Р·РѕРІР°РЅСѓ СЃС‚РѕСЂС–РЅРєСѓ. HTML РЅР°РґР°С” Р·Р°СЃРѕР±Рё РґР»СЏ СЃС‚РІРѕСЂРµРЅРЅСЏ СЃС‚СЂСѓРєС‚СѓСЂРѕРІР°РЅРёС… РґРѕРєСѓРјРµРЅС‚С–РІ, РїРѕР·РЅР°С‡Р°СЋС‡Рё СЃС‚СЂСѓРєС‚СѓСЂРЅСѓ СЃРµРјР°РЅС‚РёРєСѓ С‚РµРєСЃС‚Сѓ, РЅР°РїСЂРёРєР»Р°Рґ Р·Р°РіРѕР»РѕРІРєРё, Р°Р±Р·Р°С†Рё, СЃРїРёСЃРєРё, РїРѕСЃРёР»Р°РЅРЅСЏ, С†РёС‚Р°С‚Рё С‚Р° С–РЅС€С– РµР»РµРјРµРЅС‚Рё. Р•Р»РµРјРµРЅС‚Рё HTML РѕРєСЂРµСЃР»РµРЅС– С‚РµРіР°РјРё, РЅР°РїРёСЃР°РЅРёРјРё Р· РІРёРєРѕСЂРёСЃС‚Р°РЅРЅСЏРј РєСѓС‚РѕРІРёС… РґСѓР¶РѕРє. РўРµРіРё, С‚Р°РєС– СЏРє С– Р±РµР·РїРѕСЃРµСЂРµРґРЅСЊРѕ РІРІРѕРґСЏС‚СЊ РІРјС–СЃС‚ РЅР° СЃС‚РѕСЂС–РЅРєСѓ. Р†РЅС€С– С‚РµРіРё, С‚Р°РєС– СЏРє< img /> < input /> < p >РѕС‚РѕС‡СѓСЋС‚СЊ С– РЅР°РґР°СЋС‚СЊ С–РЅС„РѕСЂРјР°С†С–СЋ РїСЂРѕ С‚РµРєСЃС‚ РґРѕРєСѓРјРµРЅС‚Р° С– РјРѕР¶СѓС‚СЊ РІРєР»СЋС‡Р°С‚Рё С–РЅС€С– С‚РµРіРё СЏРє РїС–РґРµР»РµРјРµРЅС‚Рё. Р‘СЂР°СѓР·РµСЂРё РЅРµ РїРѕРєР°Р·СѓСЋС‚СЊ С‚РµРіРё HTML, Р°Р»Рµ РІРёРєРѕСЂРёСЃС‚РѕРІСѓСЋС‚СЊ С—С… РґР»СЏ С–РЅС‚РµСЂРїСЂРµС‚Р°С†С–С— РІРјС–СЃС‚Сѓ СЃС‚РѕСЂС–РЅРєРё.<br><br>
 
-HTML може вбудовувати програми, написані на мові сценаріїв, наприклад JavaScript, що впливає на поведінку та вміст вебсторінок. Включення CSS визначає вигляд і компонування вмісту. World Wide Web Consortium (W3C), який супроводжує стандарти HTML та CSS, заохочує використання CSS над явним презентаційним HTML з 1997 року.[1]<br><br>
+HTML РјРѕР¶Рµ РІР±СѓРґРѕРІСѓРІР°С‚Рё РїСЂРѕРіСЂР°РјРё, РЅР°РїРёСЃР°РЅС– РЅР° РјРѕРІС– СЃС†РµРЅР°СЂС–С—РІ, РЅР°РїСЂРёРєР»Р°Рґ JavaScript, С‰Рѕ РІРїР»РёРІР°С” РЅР° РїРѕРІРµРґС–РЅРєСѓ С‚Р° РІРјС–СЃС‚ РІРµР±СЃС‚РѕСЂС–РЅРѕРє. Р’РєР»СЋС‡РµРЅРЅСЏ CSS РІРёР·РЅР°С‡Р°С” РІРёРіР»СЏРґ С– РєРѕРјРїРѕРЅСѓРІР°РЅРЅСЏ РІРјС–СЃС‚Сѓ. World Wide Web Consortium (W3C), СЏРєРёР№ СЃСѓРїСЂРѕРІРѕРґР¶СѓС” СЃС‚Р°РЅРґР°СЂС‚Рё HTML С‚Р° CSS, Р·Р°РѕС…РѕС‡СѓС” РІРёРєРѕСЂРёСЃС‚Р°РЅРЅСЏ CSS РЅР°Рґ СЏРІРЅРёРј РїСЂРµР·РµРЅС‚Р°С†С–Р№РЅРёРј HTML Р· 1997 СЂРѕРєСѓ.[1]<br><br>
 
-HTML впроваджує засоби для:[1]
+HTML РІРїСЂРѕРІР°РґР¶СѓС” Р·Р°СЃРѕР±Рё РґР»СЏ:[1]
 
-створення структурованого документа шляхом позначення структурного складу тексту: заголовки, абзаци, списки, таблиці, цитати та інше;
-отримання інформації із Всесвітньої мережі через гіперпосилання;
-створення інтерактивних форм;
-включення зображень, звуку, відео, та інших об'єктів до тексту.</big></p>
+СЃС‚РІРѕСЂРµРЅРЅСЏ СЃС‚СЂСѓРєС‚СѓСЂРѕРІР°РЅРѕРіРѕ РґРѕРєСѓРјРµРЅС‚Р° С€Р»СЏС…РѕРј РїРѕР·РЅР°С‡РµРЅРЅСЏ СЃС‚СЂСѓРєС‚СѓСЂРЅРѕРіРѕ СЃРєР»Р°РґСѓ С‚РµРєСЃС‚Сѓ: Р·Р°РіРѕР»РѕРІРєРё, Р°Р±Р·Р°С†Рё, СЃРїРёСЃРєРё, С‚Р°Р±Р»РёС†С–, С†РёС‚Р°С‚Рё С‚Р° С–РЅС€Рµ;
+РѕС‚СЂРёРјР°РЅРЅСЏ С–РЅС„РѕСЂРјР°С†С–С— С–Р· Р’СЃРµСЃРІС–С‚РЅСЊРѕС— РјРµСЂРµР¶С– С‡РµСЂРµР· РіС–РїРµСЂРїРѕСЃРёР»Р°РЅРЅСЏ;
+СЃС‚РІРѕСЂРµРЅРЅСЏ С–РЅС‚РµСЂР°РєС‚РёРІРЅРёС… С„РѕСЂРј;
+РІРєР»СЋС‡РµРЅРЅСЏ Р·РѕР±СЂР°Р¶РµРЅСЊ, Р·РІСѓРєСѓ, РІС–РґРµРѕ, С‚Р° С–РЅС€РёС… РѕР±'С”РєС‚С–РІ РґРѕ С‚РµРєСЃС‚Сѓ.</big></p>
 <img style="position: relative;width: 250px;height: 250px; left: 43%;" src="img/img1.png">
 <br>
-<a style="position: relative;left: 3%;" href="https://uk.wikipedia.org/wiki/HTML">Википедия</a>
+<a style="position: relative;left: 3%;" href="https://uk.wikipedia.org/wiki/HTML">Р’РёРєРёРїРµРґРёСЏ</a>
 </body>
 </html>
