--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1 style="position: relative;text-align: center;"><big>Добро я тут пожаловать</big></h1>
 <hr>
-<h2 style="position: relative;text-align: center;"><big>Сайт тренировка</big></h2>
+<h2 style="position: relative;text-align: center;"><big>Ну ви ж знаете шо ростик лох</big></h2>
 <br>
 <h3 style="position: relative;text-align: center;"><big>HTML</big></h3>
 <p style="position: relative; left: 3%;width: 95%;"><big><big>HTML (англ. HyperText Markup Language — мова розмітки гіпертексту) — це мова тегів, засобами якої здійснюється розмічання вебсторінок для мережі Інтернет. Браузери отримують HTML-документи з вебсервера або з локальної пам'яті й передають документи в мультимедійні вебсторінки. HTML описує структуру вебсторінки семантично і спочатку включені сигнали для зовнішнього вигляду документа.<br><br>
